--- a/arch/arm/configs/bcm2709_defconfig
+++ b/arch/arm/configs/bcm2709_defconfig
@@ -563,7 +563,7 @@ CONFIG_JOYSTICK_XPAD_FF=y
 CONFIG_JOYSTICK_XPAD_LEDS=y
 CONFIG_JOYSTICK_RPISENSE=m
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_ADS7846=m
+CONFIG_TOUCHSCREEN_ADS7846=y
 CONFIG_TOUCHSCREEN_EGALAX=m
 CONFIG_TOUCHSCREEN_FT6236=m
 CONFIG_TOUCHSCREEN_RPI_FT5406=m
@@ -644,7 +644,7 @@ CONFIG_W1_SLAVE_BQ27000=m
 CONFIG_BATTERY_DS2760=m
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_GPIO=y
-CONFIG_HWMON=m
+CONFIG_HWMON=y
 CONFIG_SENSORS_SHT21=m
 CONFIG_SENSORS_SHTC1=m
 CONFIG_THERMAL=y
