--- a/arch/arm/boot/dts/bcm2709-rpi-2-b.dts
+++ b/arch/arm/boot/dts/bcm2709-rpi-2-b.dts
@@ -20,7 +20,7 @@
 
 	spi0_cs_pins: spi0_cs_pins {
 		brcm,pins = <8 7>;
-		brcm,function = <4>; /* output */
+		brcm,function = <1>; /* output */
 	};
 
 	i2c0_pins: i2c0 {
@@ -43,10 +43,9 @@
 		brcm,function = <4>;
 	};
 
-	ads7846_pins: ads7846_pins {
-		brcm,pins = <25>; /* illegal default value */
-		brcm,function = <0>; /* in */
-		brcm,pull = <2>; /* none */
+	rpi_display_pins: rpi_display_pins {
+		brcm,pins = <23 24>; /* illegal default value */
+		brcm,function = <1 1>; /* out */
 	};
 
 };
@@ -67,7 +66,6 @@
 };
 
 &spi0 {
-	compatible = "brcm,bcm2708-spi";
 	pinctrl-names = "default";
 	pinctrl-0 = <&spi0_pins &spi0_cs_pins>;
 	cs-gpios = <&gpio 8 1>, <&gpio 7 1>;
@@ -91,24 +89,16 @@
 		status = "disabled";
 	};
 
-	ads7846: ads7846@1 {
-		compatible = "ti,ads7846";
-		reg = <1>;
+	rpidisplay: rpi-display@0{
+		compatible = "sitronix,st7789v";
+		reg = <0>;
 		pinctrl-names = "default";
-		pinctrl-0 = <&ads7846_pins>;
-
-		spi-max-frequency = <500000>;
-		interrupts = <25 2>; /* high-to-low edge triggered */
-		interrupt-parent = <&gpio>;
-		pendown-gpio = <&gpio 25 0>;
-		/* driver defaults */
-		ti,x-min = /bits/ 16 <208>;
-		ti,y-min = /bits/ 16 <288>;
-		ti,x-max = /bits/ 16 <3905>;
-		ti,y-max = /bits/ 16 <3910>;
-		ti,pressure-min = /bits/ 16 <0>;
-		ti,pressure-max = /bits/ 16 <255>;
-		ti,x-plate-ohms = /bits/ 16 <150>;
+		pinctrl-0 = <&rpi_display_pins>;
+		bgr = <0>;
+		spi-max-frequency = <48000000>;
+		buswidth = <9>;
+		reset-gpios = <&gpio 23 0>;
+		dc-gpios = <&gpio 24 0>;
 	};
 };
 
