--- a/arch/arm/configs/bcm2709_defconfig
+++ b/arch/arm/configs/bcm2709_defconfig
@@ -609,10 +609,9 @@ CONFIG_I2C_CHARDEV=m
 CONFIG_I2C_MUX_PCA954x=m
 CONFIG_I2C_BCM2708=y
 CONFIG_I2C_BCM2835=y
-CONFIG_SPI_BCM2708=y
 CONFIG_I2C_GPIO=y
 CONFIG_SPI=y
-CONFIG_SPI_BCM2835=m
+CONFIG_SPI_BCM2835=y
 CONFIG_SPI_BCM2835AUX=m
 CONFIG_SPI_SPIDEV=y
 CONFIG_PPS=m
@@ -1101,7 +1100,7 @@ CONFIG_LIRC_IMON=m
 CONFIG_LIRC_RPI=m
 CONFIG_LIRC_SASEM=m
 CONFIG_LIRC_SERIAL=m
-CONFIG_FB_TFT=m
+CONFIG_FB_TFT=y
 CONFIG_FB_TFT_AGM1264K_FL=m
 CONFIG_FB_TFT_BD663474=m
 CONFIG_FB_TFT_HX8340BN=m
@@ -1123,6 +1122,7 @@ CONFIG_FB_TFT_SSD1306=m
 CONFIG_FB_TFT_SSD1331=m
 CONFIG_FB_TFT_SSD1351=m
 CONFIG_FB_TFT_ST7735R=m
+CONFIG_FB_TFT_ST7789V=y
 CONFIG_FB_TFT_TINYLCD=m
 CONFIG_FB_TFT_TLS8204=m
 CONFIG_FB_TFT_UC1701=m
