fix for st7789v SPI

--- a/arch/arm/boot/dts/bcm2710-rpi-3-b.dts
+++ b/arch/arm/boot/dts/bcm2710-rpi-3-b.dts
@@ -145,10 +145,11 @@
 		pinctrl-names = "default";
 		pinctrl-0 = <&rpi_display_pins>;
 		bgr = <0>;
+		fps = <100>;
 		rotate = <90>;
 		spi-max-frequency = <48000000>;
-		txbuflen = <51200>;
-		buswidth = <9>;
+		txbuflen = <153600>;
+		buswidth = <8>;
 		reset-gpios = <&gpio 23 0>;
 		dc-gpios = <&gpio 24 0>;
 	};
